# sigyn

./: .gitignore  .osv-scanner.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  codeql.yml  devskim.yml  osv-scanner.yml  pages.yml  release.yml
action/: action.yml  gitlab-ci-template.yml
action/bitbucket-pipe/: pipe.sh  pipe.yml
crates/sigyn-cli/: Cargo.toml
crates/sigyn-cli/src/: agent.rs  config.rs  doctor.rs  main.rs  project_config.rs  project_detect.rs
crates/sigyn-cli/src/commands/: audit.rs  ci.rs  context.rs  delegation.rs  env.rs  fork.rs  identity.rs  import.rs  mfa.rs  mod.rs  notifications.rs  onboard.rs  org.rs  policy.rs  project.rs  rotate.rs  run.rs  secret.rs  status.rs  sync.rs  update.rs  vault.rs
crates/sigyn-cli/src/importexport/: cloud.rs  mod.rs
crates/sigyn-cli/src/inject/: dotenv.rs  export.rs  mod.rs  process.rs  socket.rs
crates/sigyn-cli/src/notifications/: mod.rs
crates/sigyn-cli/src/output/: mod.rs
crates/sigyn-cli/src/tui/: mod.rs
crates/sigyn-cli/tests/: cli_workflows.rs
crates/sigyn-core/: Cargo.toml
crates/sigyn-core/src/: error.rs  lib.rs
crates/sigyn-core/src/audit/: anchor.rs  chain.rs  entry.rs  mod.rs  witness.rs
crates/sigyn-core/src/crypto/: envelope.rs  kdf.rs  keys.rs  mod.rs  nonce.rs  sealed.rs  vault_cipher.rs
crates/sigyn-core/src/delegation/: invite.rs  mod.rs  revoke.rs  tree.rs  validate.rs
crates/sigyn-core/src/environment/: diff.rs  mod.rs  policy.rs  promotion.rs
crates/sigyn-core/src/forks/: approval.rs  expiry.rs  leash.rs  mod.rs  types.rs
crates/sigyn-core/src/hierarchy/: engine.rs  manifest.rs  mod.rs  path.rs  slots.rs
crates/sigyn-core/src/identity/: keygen.rs  mfa.rs  mod.rs  profile.rs  session.rs  shamir.rs  wrapping.rs
crates/sigyn-core/src/policy/: acl.rs  constraints.rs  engine.rs  member.rs  mod.rs  roles.rs  storage.rs
crates/sigyn-core/src/rotation/: breach.rs  dead.rs  history.rs  hooks.rs  mod.rs  schedule.rs
crates/sigyn-core/src/secrets/: acl.rs  generation.rs  mod.rs  reference.rs  types.rs  validation.rs
crates/sigyn-core/src/sync/: conflict.rs  crdt.rs  git.rs  mdns.rs  mod.rs  state.rs  vector_clock.rs
crates/sigyn-core/src/vault/: env_file.rs  local_state.rs  lock.rs  manifest.rs  mod.rs  path.rs  transfer.rs
crates/sigyn-engine/: Cargo.toml
crates/sigyn-engine/src/: device.rs  io.rs  lib.rs
crates/sigyn-engine/src/audit/: anchor.rs  chain.rs  checkpoint.rs  enforce.rs  mod.rs  witness_log.rs
crates/sigyn-engine/src/forks/: leash.rs  mod.rs
crates/sigyn-engine/src/hierarchy/: mod.rs  path.rs  slots.rs  sync.rs
crates/sigyn-engine/src/identity/: keygen.rs  mfa.rs  mod.rs  session.rs
crates/sigyn-engine/src/policy/: mod.rs  storage.rs
crates/sigyn-engine/src/sync/: deploy_key.rs  git.rs  mod.rs  vault_sync.rs
crates/sigyn-engine/src/vault/: env_file.rs  local_state.rs  lock.rs  mod.rs  path.rs
crates/sigyn-recovery/: Cargo.toml
crates/sigyn-recovery/src/: main.rs
crates/sigyn-web/: Cargo.toml
crates/sigyn-web/src/: error.rs  frontend.rs  lib.rs  middleware.rs  server.rs  session.rs  state.rs
crates/sigyn-web/src/handlers/: audit.rs  auth.rs  identity.rs  mod.rs  secret.rs  vault.rs
crates/sigyn-web/src/static/: index.html
docs/: DEVELOPMENT.md  README.md  architecture.md  cli-reference.md  delegation.md  examples.md  feature-audit.md  getting-started.md  security.md  sync.md
docs-site/: book.toml  copy-docs.sh
docs-site/src/: DEVELOPMENT.md  FAQ.md  SUMMARY.md  architecture.md  audit.md  ci-cd.md  cli-reference.md  configuration.md  contributing.md  delegation.md  environments.md  examples.md  forks.md  getting-started.md  import-export.md  introduction.md  mfa.md  multi-vault.md  organizations.md  recovery.md  robots.txt  security.md  sync.md  testing.md  web-gui.md
docs-site/theme/: custom.css  head.hbs
tests/: E2E_TEST_PLAN.md  E2E_TEST_RESULTS.md  adversarial_test.sh  e2e_test.sh
tests/integration/: Cargo.toml
tests/integration/src/: audit_chain.rs  audit_mode.rs  delegation_invite.rs  env_promotion.rs  forks_leash.rs  lib.rs  member_access.rs  policy_constraints.rs  revocation.rs  secret_types.rs  vault_lifecycle.rs
