[package]
name = "sigyn-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sigyn"
path = "src/main.rs"

[dependencies]
sigyn-core = { path = "../sigyn-core" }

# CLI
clap.workspace = true
clap_complete.workspace = true
ratatui.workspace = true
crossterm.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
console.workspace = true
tabled.workspace = true
rpassword.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ciborium.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# HTTP
reqwest.workspace = true

# Other
chrono.workspace = true
uuid.workspace = true
directories.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
