[package]
name = "sigyn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sigyn"
path = "src/main.rs"

[features]
fast-kdf = ["sigyn-core/fast-kdf"]
vendored-openssl = ["sigyn-core/vendored-openssl"]

[dependencies]
sigyn-core = { path = "../sigyn-core", version = "0.2.5" }

# CLI
clap.workspace = true
clap_complete.workspace = true
ratatui.workspace = true
crossterm.workspace = true
dialoguer.workspace = true
console.workspace = true
rpassword.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ciborium.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# HTTP
reqwest.workspace = true

# Other
chrono.workspace = true
uuid.workspace = true
directories.workspace = true
base64.workspace = true
totp-rs.workspace = true
qr2term.workspace = true
blake3.workspace = true
rand.workspace = true
hkdf.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
