[package]
name = "sigyn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Encrypted vault library — envelope encryption, RBAC, audit trails, and CRDT sync"
repository = "https://github.com/anthropic/sigyn"
keywords = ["encryption", "vault", "secrets", "cryptography"]
categories = ["cryptography", "authentication"]

[features]
fast-kdf = []

[dependencies]
# Crypto
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
argon2.workspace = true
blake3.workspace = true
zeroize.workspace = true
subtle.workspace = true
secrecy.workspace = true
rand.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
toml.workspace = true

# Other
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
indexmap.workspace = true
globset.workspace = true
base64.workspace = true
regex.workspace = true
cron.workspace = true

[dev-dependencies]
proptest.workspace = true
