[package]
name = "sigyn-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
fast-kdf = ["sigyn-core/fast-kdf"]
vendored-openssl = ["openssl-sys/vendored"]

[dependencies]
sigyn-core = { path = "../sigyn-core", version = "0.7.0" }

# Crypto
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
argon2.workspace = true
blake3.workspace = true
zeroize.workspace = true
secrecy.workspace = true
rand.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
toml.workspace = true

# Storage
uuid.workspace = true
directories.workspace = true
tempfile.workspace = true
fd-lock.workspace = true

# Time
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Sync
git2 = "0.20"
openssl-sys = { version = "0.9", optional = true }

# Scheduling
cron.workspace = true

# Other
indexmap.workspace = true
globset.workspace = true
base64.workspace = true
regex.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
