[package]
name = "sigyn-recovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sigyn-recovery"
path = "src/main.rs"

[dependencies]
sigyn-core = { path = "../sigyn-core", version = "0.2.1" }

# CLI
clap.workspace = true
rpassword.workspace = true
dialoguer.workspace = true
console.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Other
chrono.workspace = true
directories.workspace = true
git2 = "0.20"

[dev-dependencies]
tempfile.workspace = true
