[package]
name = "sigyn-recovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sigyn-recovery"
path = "src/main.rs"

[features]
vendored-openssl = ["sigyn-engine/vendored-openssl"]

[dependencies]
sigyn-engine = { path = "../sigyn-engine", version = "0.8.0" }

# CLI
clap.workspace = true
rpassword.workspace = true
dialoguer.workspace = true
console.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Other
chrono.workspace = true
directories.workspace = true
git2 = "0.20"

[dev-dependencies]
tempfile.workspace = true
